--- a/VR16-main/ShootingCodeGame/Config/DefaultEngine.ini
+++ b/VR16-main/ShootingCodeGame/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ShootingGame/Maps/EntryLevel.EntryLevel
 EditorStartupMap=/Game/ShootingGame/Maps/EntryLevel.EntryLevel
 GlobalDefaultGameMode="/Script/ShootingCodeGame.ShootingCodeGameGameMode"
+GameInstanceClass=/Game/ShootingGame/GameMode/BP_ShootingGameInstance.BP_ShootingGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -135,3 +136,4 @@ ManualIPAddress=
 
 [OnlineSubsystem]
 DefaultPlatformService=Null
+
